# comercio

./: .gitignore  README.md
backend/: pyproject.toml
backend/api/: admin.py  apps.py  models.py  notifiers.py  serializers.py  urls.py  views.py  viewsets.py
backend/api/fixtures/: bodegas.json  oficodas.json  repartos.json
backend/api/migrations/: 0001_initial.py  0002_bodega_oficoda.py  0003_auto_20200707_1211.py  0004_auto_20200707_1616.py  0005_auto_20200714_1033.py  0006_auto_20200719_2305.py
backend/common/: asgi.py  settings.py  wsgi.py
client/: package.json
client/public/: index.html  manifest.json
client/src/: App.js  Routes.js
client/src/components/: PrivateRoute.js  index.js
client/src/contexts/: login.js
client/src/helpers/: axios.js  hooks.js  index.js  requests.js
client/src/layouts/Main/: Main.js
client/src/layouts/Main/components/Footer/: Footer.js
client/src/layouts/Main/components/Sidebar/: Sidebar.js
client/src/layouts/Main/components/Topbar/: Topbar.js
client/src/layouts/Minimal/components/Topbar/: Topbar.js
client/src/theme/: typography.js
client/src/views/: index.js
client/src/views/Dashboard/: Dashboard.js  LatestDeliveries.js  chart.js  index.js
client/src/views/Dashboard/components/Budget/: Budget.js
client/src/views/Distributions/: AddDistributionModal.js  DeleteDistributionModal.js  index.js
client/src/views/Nbhd/: index.js
client/src/views/NotFound/: NotFound.js
client/src/views/ProductList/: AddProductModal.js  DeleteProductModal.js  EditProductModal.js  index.js
client/src/views/SignIn/: SignIn.js
(+7 files in other folders)
